# libQIRC

./: .travis.yml  CMakeLists.txt  CTestConfig.cmake  Connection  Doxyfile.in  FindQIRC.cmake  HostMask  LICENSE  README  ServerInfo  colors.cc  connection.cc  connection.h  hostmask.cc  hostmask.h  qirc.h  serverinfo.cc  serverinfo.h
cmake/: DocTarget.cmake  Findcppcheck.cmake
tests/: connection.cc  connectiontest.cc  connectiontest.h  serverinfo-operators.cc
